# raytracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  color.hpp  main.cpp  vec3.hpp
